--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@ body {
     background-color: rgba(178, 250, 232, 0.603);
 }
 
+h1, h2, h3 {
+    margin-bottom: 10px;
+}
+
+ul {
+    margin-top: 0;
+}
+
 .container {
     padding: 0px;
     text-align: center;
@@ -88,7 +96,7 @@ body {
     color: black;
     text-align: center;
     border: 1px solid;
-    padding-top: 15px;
+    padding-top: 20px;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -102,40 +110,42 @@ body {
     margin-right: 50px;
 }
 
+
+
 .profile {
-    margin-left: 10px;
     margin-top: 20px;
     margin-bottom: 40px;
-    text-align: justify;
-    justify-content: center;
     display: flex;
-    align-items: stretch;
-    flex-direction: row;
-    position: relative;
-    flex-wrap: nowrap;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 800px; /* Adjust max-width as needed */
+    margin-left: auto;
+    margin-right: auto;
+    flex-basis: calc(50% - 10px); /* Adjust width of each profile info */
+    margin-bottom: 20px;
 }
 
-.informational {
+
+.information {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: 20px auto;
     max-width: 700px;
+    margin-bottom: 10px; /* Add some bottom margin for separation */
 }
 
-.informational h4 {
+.information p {
     flex-basis: calc(50% - 10px);
     margin: 3px 5px;
+    text-align: left;
 }
 
 #name {
     margin-top: 70px;
 }
 
-.aboutme {
-    text-align: center;
-}
 
 #aboutmee {
     color:  rgb(17, 82, 33);
@@ -159,29 +169,6 @@ body {
 
 #aboutmeinfo h3 {
     margin: 0;
-}
-
-.hobbies {
-    text-align: center;
-}
-
-#hobbiess {
-    color:  rgb(17, 82, 33);
-    text-shadow: 3px 4px rgba(255, 254, 183, 0.815);
-    font-weight: bolder;
-    font-family: cursive;
-    background: rgba(179, 224, 119, 0.623);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-}
-
-#hobbiesinfo {
-    text-align: justify;
-    box-sizing: border-box;
-    padding-left: 30px;
-    padding-right: 30px;
 }
 
 
@@ -213,7 +200,7 @@ body {
 #proskils {
     text-align: justify;
     box-sizing: border-box;
-    padding-left: 30px;
+    padding-left: 500px;
     padding-right: 30px;
     
 }
@@ -246,9 +233,6 @@ body {
 }
 
 
-.education {
-    text-align: center;
-}
 
 #educationn {
     color:  rgb(17, 82, 33);
@@ -269,9 +253,6 @@ body {
     padding-right: 30px;
 }
 
-.experience {
-    text-align: center;
-}
 
 #experiencee {
     color:  rgb(17, 82, 33);
@@ -292,8 +273,23 @@ body {
     padding-right: 30px;
 }
 
-.reference {
-    text-align: center;
+#awardss {
+    color:  rgb(17, 82, 33);
+    text-shadow: 3px 4px rgba(255, 254, 183, 0.815);
+    font-weight: bolder;
+    font-family: cursive;
+    background: rgba(179, 224, 119, 0.623);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+}
+
+#awardsinfo {
+    text-align: justify;
+    box-sizing: border-box;
+    padding-left: 400px;
+    padding-right: 30px;
 }
 
 #referencee {
